--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,7 @@
   <div class="container">
     <div>
       <h3>Live size</h3>
-      <responsive-table></responsive-table>
+      <responsive-table edit-table="true"></responsive-table>
       <button type="button" onclick="values2()">Colores</button>
       <button type="button" onclick="values3()">Otros datos</button>
       <button type="button" onclick="addSearch()">Agregar Buscador</button>
@@ -52,11 +52,23 @@
   </div>
   <script>
     const responsiveTable = document.querySelector("responsive-table");
-    responsiveTable.headers = ["text 1", "text 2", "text3"];
+    responsiveTable.headers = ["First name", "Last name", "Age", "Phone number", "Job"];
     responsiveTable.columns = [
-      { id: 1, name: "alexa", alias: "la chida" },
-      { id: 2, name: "siri", alias: "sin futuro" },
-      { id: 3, name: "cortana", alias: "al olvido" }
+      { id: 1, first_name: "Star", last_name: "Butterfly", age: 14, phone_number:"92948222342", job: "Princess Mewni" },
+      { id: 2, first_name: "Marco", last_name: "Díaz", age: 15, phone_number:"(12)12769182", job: "Squire" },
+      { id: 3, first_name: "Finn", last_name: "Murtance", age: 16, phone_number:"28934927", job: "Adventure" },
+      { id: 4, first_name: "Jake", last_name: "The Dog", age: 35, phone_number:"019309102", job: "Adventure" },
+      { id: 5, first_name: "Simon", last_name: "Petrikov", age: 40, phone_number:"-", job: "Frozen King" },
+      { id: 6, first_name: "Homero", last_name: "Simpson", age: 50, phone_number:"67238428", job: "Security manager" },
+      { id: 7, first_name: "Marceline", last_name: "Abadeer", age: 999, phone_number:"9991238919", job: "Queen" },
+      { id: 8, first_name: "Rose", last_name: "Quarts", age: 6000, phone_number:"-", job: "Planet defender" },
+      { id: 9, first_name: "Gregory", last_name: "Universe", age: 40, phone_number:"-", job: "Singer" },
+      { id: 10, first_name: "Steven", last_name: "Universe", age: 14, phone_number:"239782642", job: "Crystal gems leader" },
+      { id: 11, first_name: "Connie", last_name: "Maheswaran", age: 12, phone_number:"828934728", job: "Swordswoman" },
+      { id: 12, first_name: "Dipper", last_name: "Pines", age: 13, phone_number:"1414323353", job: "Explorer" },
+      { id: 13, first_name: "Mabel", last_name: "Pines", age: 13, phone_number:"827864223", job: "Explorer/Artist" },
+      { id: 14, first_name: "Stanford", last_name: "Pines", age: 45, phone_number:"-", job: "Inventor/Investigator" },
+      { id: 15, first_name: "Stanley", last_name: "Pines", age: 45, phone_number:"32433456", job: "Swindler" }
     ];
 
     function values2() {
